[gd_scene load_steps=5 format=2]

[ext_resource path="res://prefabs/items/item_component/item_component.tscn" type="PackedScene" id=1]
[ext_resource path="res://prefabs/items/checkbox_text_item/editable_label.gd" type="Script" id=2]
[ext_resource path="res://prefabs/items/checkbox_item/CheckBox.gd" type="Script" id=3]
[ext_resource path="res://prefabs/items/checkbox_text_item/checkbox_text_item.gd" type="Script" id=4]

[node name="CheckboxItem" type="Panel"]
margin_right = 165.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemComponent" parent="." instance=ExtResource( 1 )]

[node name="CheckBox" type="CheckBox" parent="."]
margin_left = 5.64874
margin_top = 4.16223
margin_right = 29.6487
margin_bottom = 28.1622
focus_mode = 0
mouse_filter = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 30.0
margin_top = 9.0
margin_right = 159.0
margin_bottom = 23.0
mouse_filter = 1
text = "waw"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Label"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="instantiated_item" from="ItemComponent" to="." method="_on_ItemComponent_instantiated_item"]
[connection signal="toggled" from="CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="text_changed" from="Label" to="." method="_on_Label_text_changed"]
